Update layout Story and animation fab_menu

--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/bg_frg_story" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fab_create_story"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -27,7 +27,7 @@
         app:backgroundTint="@color/DeepPink"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.977"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/img_bg_story"
         app:layout_constraintVertical_bias="0.932" />
@@ -80,7 +80,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="100dp"
         android:text="Hạt cát nhỏ"
         android:textColor="@android:color/white"
         android:textSize="30sp"
@@ -90,27 +90,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/oval"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
+            android:id="@+id/layout_menu_story"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:background="@drawable/oval"
-            android:orientation="horizontal">
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:padding="2dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/img_cancel_story"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
@@ -185,7 +195,7 @@
                     android:id="@+id/txt_follow_story"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:gravity="top|center"
                     android:text="Theo dõi"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />
@@ -217,19 +227,19 @@
             </LinearLayout>
         </LinearLayout>
 
+
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/fab_menu_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|end"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:backgroundTint="#64dd17"
             android:clickable="true"
             android:src="@drawable/ic_back_arrow"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
