--- a/app/src/main/res/anim/in_right.xml
+++ b/app/src/main/res/anim/in_right.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-        android:fromXDelta="0" android:toXDelta="600"
+        android:fromXDelta="100%p" android:toXDelta="0"
         android:duration="1000"
         />
 </set>
