--- a/app/src/main/res/layout/dialog_back.xml
+++ b/app/src/main/res/layout/dialog_back.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
-    android:layout_height="230dp"
+    android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     app:cardCornerRadius="15dp"
@@ -16,10 +16,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <NumberPicker
-            android:id="@+id/number_picker"
+        <TextView
+            android:id="@+id/tv_title"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:padding="20dp"
+            android:textColor="@color/Black"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/btn_cancel"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -46,7 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/btn_cancel"
             app:layout_constraintRight_toLeftOf="@id/btn_ok"
-            app:layout_constraintTop_toBottomOf="@id/number_picker" />
+            app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
         <Button
             android:id="@+id/btn_ok"
