update create animation for view

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="Nam"
+        android:visibility="gone"
         android:textColor="@color/Black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -60,6 +61,7 @@
         android:id="@+id/cb_male"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@id/tv_male"
         app:layout_constraintRight_toLeftOf="@id/tv_female"
         app:layout_constraintTop_toTopOf="@id/tv_gender" />
@@ -70,6 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:text="Nữ"
+        android:visibility="gone"
         android:textColor="@color/Red"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -79,6 +82,7 @@
 
     <CheckBox
         android:id="@+id/cb_female"
+        android:visibility="gone"
         android:layout_width="0dp"
         android:layout_height="30dp"
         app:layout_constraintLeft_toRightOf="@id/tv_female"
@@ -92,6 +96,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="Độ tuổi :"
+        android:visibility="gone"
         android:textColor="@color/Blue"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -104,6 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Từ"
+        android:visibility="gone"
         android:textColor="@color/Black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -117,6 +123,7 @@
         android:layout_height="30dp"
         android:gravity="center"
         android:text="18 tuổi"
+        android:visibility="gone"
         android:textAlignment="center"
         android:textColor="@color/Violet"
         android:textStyle="bold"
@@ -131,6 +138,7 @@
         android:layout_marginLeft="20dp"
         android:text="đến"
         android:textColor="@color/Red"
+        android:visibility="gone"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@id/tv_from_age"
@@ -147,6 +155,7 @@
         android:textAlignment="center"
         android:textColor="@color/Violet"
         android:textStyle="bold"
+        android:visibility="gone"
         android:layout_marginRight="20dp"
         app:layout_constraintLeft_toRightOf="@id/tv_to"
         app:layout_constraintRight_toRightOf="parent"
@@ -160,6 +169,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:text="Chủ đề :"
+        android:visibility="gone"
         android:textColor="@color/Blue"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -171,6 +181,7 @@
         android:id="@+id/tv_value_category"
         android:layout_width="0dp"
         android:layout_height="30dp"
+        android:visibility="gone"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
