--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,6 +16,7 @@
         android:id="@+id/edtPhone"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:text="0963389695"
         android:layout_marginBottom="50dp"
         android:hint="Input your phone"
         android:inputType="phone"
@@ -33,6 +34,7 @@
         android:layout_height="50dp"
         android:hint="Password"
         android:singleLine="true"
+        android:text="111111"
         android:inputType="textPassword"
         android:textColorHint="#220169"
         android:textStyle="bold"
@@ -81,6 +83,7 @@
         android:hint="Input your phone"
         android:inputType="phone"
         android:singleLine="true"
+        android:visibility="gone"
         android:textColorHint="#220169"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,14 +93,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/btnBackToLogin"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:background="@drawable/bg_btn_accept"
+        android:text="Back"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        android:textColor="#220169"
+        android:layout_marginRight="10dp"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnGetCode"
+        app:layout_constraintTop_toBottomOf="@id/edtPhoneRegister" />
+
+
+    <Button
         android:id="@+id/btnGetCode"
         android:layout_width="100dp"
         android:layout_height="30dp"
+        android:visibility="gone"
         android:background="@drawable/bg_btn_accept"
         android:text="Get Code"
         android:textAllCaps="false"
         android:textColor="#220169"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btnBackToLogin"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtPhoneRegister" />
 
@@ -106,7 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="edtPhoneRegister,btnGetCode" />
+        app:constraint_referenced_ids="btnBackToLogin,edtPhoneRegister,btnGetCode" />
 
     <EditText
         android:id="@+id/edtCode"
@@ -117,11 +137,27 @@
         android:singleLine="true"
         android:textColorHint="#220169"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="W, 3:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnBackToGetCode"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:background="@drawable/bg_btn_accept"
+        android:text="Back"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        android:textColor="#220169"
+        android:layout_marginRight="10dp"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnConfirm"
+        app:layout_constraintTop_toBottomOf="@id/edtCode" />
 
     <Button
         android:id="@+id/btnConfirm"
@@ -131,9 +167,11 @@
         android:text="Confirm"
         android:textAllCaps="false"
         android:textColor="#220169"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@id/btnBackToGetCode"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtCode" />
+
 
     <android.support.constraint.Group
         android:id="@+id/groupViewConfirmCode"
