Update vertical viewpager

--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <com.team.s.sapp.adapter.main.story.custom.VerticalViewPager
         android:id="@+id/vp_story"
         android:layout_width="0dp"
         android:layout_height="0dp"
