Update change background images: like, comment, follow

--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -59,12 +59,12 @@
 
         <ImageView
             android:id="@+id/img_heart_story"
-            android:layout_width="30dp"
+            android:layout_width="35dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="4dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_heart"
+            android:background="@drawable/ic_heart"
             app:layout_constraintEnd_toStartOf="@+id/img_cmt_story"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/img_cancel_story"
@@ -75,7 +75,6 @@
             android:id="@+id/txt_heart_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
             android:gravity="center"
             android:text="1,52k"
             android:textColor="@android:color/white"
@@ -93,7 +92,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_comment"
+            android:background="@drawable/ic_comment"
             app:layout_constraintEnd_toStartOf="@+id/img_follow_story"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/img_heart_story"
@@ -126,7 +125,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_follow_us"
+            android:background="@drawable/ic_follow_us"
             app:layout_constraintEnd_toStartOf="@+id/img_change_story"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/img_cmt_story"
@@ -158,7 +157,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_change"
+            android:background="@drawable/ic_change"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_follow_story"
             app:layout_constraintTop_toTopOf="parent" />
